--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 		<div class = "nav">
 		
 		
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Landing%20Page.html">Home</a>
+		<a href="index.html">Home</a>
 		
 
 		
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/About%20Us.Html">About Us</a>
+		<a href="About%20Us.Html">About Us</a>
 		
 
 		
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Photo%20Gallery.html">Photo Gallery</a>
+		<a href="Photo%20Gallery.html">Photo Gallery</a>
 		
 		
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Trainings.html">Training Schedule</a> 
+		<a href="Trainings.html">Training Schedule</a> 
 		
 
 		
