--- a/Trainings.html
+++ b/Trainings.html
@@ -7,20 +7,26 @@
 	<body>
 		<h1>Training Schedule</h1>
 
-		<div class = "nav">
+	<div class = "nav">
 		
-		<span class = "Firstbutton">
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Landing%20Page.html">Home</a> &nbsp &nbsp
-		</span>
+		
+		<a href="index.html">Home</a>
+		
 
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/About%20Us.Html">About Us</a>&nbsp &nbsp
+		
+		<a href="About%20Us.Html">About Us</a>
+		
 
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Photo%20Gallery.html">Photo Gallery</a>&nbsp &nbsp
+		
+		<a href="Photo%20Gallery.html">Photo Gallery</a>
+		
+		
+		<a href="Trainings.html">Training Schedule</a> 
+		
 
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Trainings.html">Training Schedule</a> &nbsp &nbsp
-
-		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Trainings.html">Links</a> &nbsp &nbsp
-
+		
+		<a href="file:///C:/Users/ChangTat/Desktop/HTML/Trainings.html">Links</a> 
+		
 		</div>
 		
 
