--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -31,9 +31,9 @@
 		</div>
 		
 
-		<p><img src="file:///C:/Users/ChangTat/Pictures/SUTD%20Floorball/IMG-20140917-WA0000.jpg" height="600" width="800"> </p>
-		<p><img src="file:///C:/Users/ChangTat/Pictures/SUTD%20Floorball/Last%20Training%20in%20Dover/11300001/Team%20Photo.JPG" height="600" width="800"> </p>
-		<p><img src="file:///C:/Users/ChangTat/Pictures/SUTD%20Floorball/20140903_205737.jpg" height="500" width="800"> </p>
+		<p><img src="IMG-20140917-WA0000.jpg" height="600" width="800"> </p>
+		<p><img src="Team%20Photo.JPG" height="600" width="800"> </p>
+		<p><img src="20140903_205737.jpg" height="500" width="800"> </p>
 		
 
 
